@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,6 +29,7 @@ import java.io.InputStream;
 import java.io.PrintStream;
 import java.lang.annotation.Annotation;
 import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SymbolLookup;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodType;
 import java.lang.module.ModuleDescriptor;
@@ -37,16 +38,16 @@ import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.charset.CharacterCodingException;
 import java.nio.charset.Charset;
-import java.security.AccessControlContext;
 import java.security.ProtectionDomain;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Executor;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.stream.Stream;
 
+import jdk.internal.loader.NativeLibraries;
 import jdk.internal.misc.CarrierThreadLocal;
 import jdk.internal.module.ServicesCatalog;
 import jdk.internal.reflect.ConstantPool;
@@ -112,11 +113,22 @@ public interface JavaLangAccess {
     byte[] getRawExecutableTypeAnnotations(Executable executable);
 
     /**
+     * Get the int value of the Class's class-file access flags.
+     */
+    int getClassFileAccessFlags(Class<?> klass);
+
+    /**
      * Returns the elements of an enum class or null if the
      * Class object does not represent an enum type;
      * the result is uncloned, cached, and shared by all callers.
      */
     <E extends Enum<E>> E[] getEnumConstantsShared(Class<E> klass);
+
+    /**
+     * Returns the big-endian packed minor-major version of the class file
+     * of this class.
+     */
+    int classFileVersion(Class<?> clazz);
 
     /**
      * Set current thread's blocker field.
@@ -141,12 +153,6 @@ public interface JavaLangAccess {
      *         the slot is not valid to register.
      */
     void registerShutdownHook(int slot, boolean registerShutdownInProgress, Runnable hook);
-
-    /**
-     * Returns a new Thread with the given Runnable and an
-     * inherited AccessControlContext.
-     */
-    Thread newThreadWithAcc(Runnable target, @SuppressWarnings("removal") AccessControlContext acc);
 
     /**
      * Invokes the finalize method of the given object.
@@ -183,16 +189,6 @@ public interface JavaLangAccess {
     Package definePackage(ClassLoader cl, String name, Module module);
 
     /**
-     * Record the non-exported packages of the modules in the given layer
-     */
-    void addNonExportedPackages(ModuleLayer layer);
-
-    /**
-     * Invalidate package access cache
-     */
-    void invalidatePackageAccessCache();
-
-    /**
      * Defines a new module to the Java virtual machine. The module
      * is defined to the given class loader.
      *
@@ -209,7 +205,7 @@ public interface JavaLangAccess {
      * Updates the readability so that module m1 reads m2. The new read edge
      * does not result in a strong reference to m2 (m2 can be GC'ed).
      *
-     * This method is the same as m1.addReads(m2) but without a permission check.
+     * This method is the same as m1.addReads(m2) but without a caller check.
      */
     void addReads(Module m1, Module m2);
 
@@ -246,11 +242,6 @@ public interface JavaLangAccess {
     void addOpensToAllUnnamed(Module m, String pkg);
 
     /**
-     * Updates module m to open all packages in the given sets.
-     */
-    void addOpensToAllUnnamed(Module m, Set<String> concealedPkgs, Set<String> exportedPkgs);
-
-    /**
      * Updates module m to use a service.
      */
     void addUses(Module m, Class<?> service);
@@ -268,11 +259,11 @@ public interface JavaLangAccess {
     /**
      * Updates module m to allow access to restricted methods.
      */
-    Module addEnableNativeAccess(Module m);
+    void addEnableNativeAccess(Module m);
 
     /**
-     * Updates module named {@code name} in layer {@code layer} to allow access to restricted methods.
-     * Returns true iff the given module exists in the given layer.
+     * Updates module named {@code name} in layer {@code layer} to allow access to
+     * restricted methods. Returns true iff the given module exists in the given layer.
      */
     boolean addEnableNativeAccess(ModuleLayer layer, String name);
 
@@ -282,10 +273,40 @@ public interface JavaLangAccess {
     void addEnableNativeAccessToAllUnnamed();
 
     /**
-     * Ensure that the given module has native access. If not, warn or
-     * throw exception depending on the configuration.
+     * Ensure that the given module has native access. If not, warn or throw exception
+     * depending on the configuration.
+     * @param m the module in which native access occurred
+     * @param owner the owner of the restricted method being called (or the JNI method being bound)
+     * @param methodName the name of the restricted method being called (or the JNI method being bound)
+     * @param currentClass the class calling the restricted method (for JNI, this is the same as {@code owner})
+     * @param jni {@code true}, if this event is related to a JNI method being bound
      */
-    void ensureNativeAccess(Module m, Class<?> owner, String methodName, Class<?> currentClass);
+    void ensureNativeAccess(Module m, Class<?> owner, String methodName, Class<?> currentClass, boolean jni);
+
+    /**
+     * Enable code in all unnamed modules to mutate final instance fields.
+     */
+    void addEnableFinalMutationToAllUnnamed();
+
+    /**
+     * Enable code in a given module to mutate final instance fields.
+     */
+    boolean tryEnableFinalMutation(Module m);
+
+    /**
+     * Return true if code in a given module is allowed to mutate final instance fields.
+     */
+    boolean isFinalMutationEnabled(Module m);
+
+    /**
+     * Return true if a given module has statically exported the given package to a given other module.
+     */
+    boolean isStaticallyExported(Module module, String pn, Module other);
+
+    /**
+     * Return true if a given module has statically opened the given package to a given other module.
+     */
+    boolean isStaticallyOpened(Module module, String pn, Module other);
 
     /**
      * Returns the ServicesCatalog for the given Layer.
@@ -312,85 +333,104 @@ public interface JavaLangAccess {
 
     /**
      * Count the number of leading positive bytes in the range.
+     *
+     * @implSpec Implementations of this method must perform bounds checks.
      */
     int countPositives(byte[] ba, int off, int len);
 
     /**
-     * Constructs a new {@code String} by decoding the specified subarray of
-     * bytes using the specified {@linkplain java.nio.charset.Charset charset}.
+     * Count the number of leading non-zero ascii chars in the String.
+     */
+    int countNonZeroAscii(String s);
+
+    /**
+     * Constructs a new {@code String} with the supplied Latin1 bytes.
+     * <p>
+     * <b>WARNING: The caller of this method shall relinquish and transfer the
+     * ownership of the byte array to the callee</b>, since the latter will not
+     * make a copy.
      *
-     * The caller of this method shall relinquish and transfer the ownership of
-     * the byte array to the callee since the later will not make a copy.
+     * @param bytes the byte array source
+     * @return the newly created string
+     */
+    String uncheckedNewStringWithLatin1Bytes(byte[] bytes);
+
+    /**
+     * Constructs a new {@code String} by decoding the specified byte array
+     * using the specified {@code Charset}.
+     * <p>
+     * <b>WARNING: The caller of this method shall relinquish and transfer the
+     * ownership of the byte array to the callee</b>, since the latter will not
+     * make a copy.
      *
      * @param bytes the byte array source
      * @param cs the Charset
      * @return the newly created string
      * @throws CharacterCodingException for malformed or unmappable bytes
+     * @throws NullPointerException If {@code bytes} or {@code cs} is null
      */
-    String newStringNoRepl(byte[] bytes, Charset cs) throws CharacterCodingException;
+    String uncheckedNewStringOrThrow(byte[] bytes, Charset cs) throws CharacterCodingException;
 
     /**
-     * Encode the given string into a sequence of bytes using the specified Charset.
-     *
-     * This method avoids copying the String's internal representation if the input
-     * is ASCII.
-     *
-     * This method throws CharacterCodingException instead of replacing when
-     * malformed input or unmappable characters are encountered.
+     * {@return the sequence of bytes obtained by encoding the given string in
+     * the specified {@code Charset}}
+     * <p>
+     * <b>WARNING: This method returns the {@code byte[]} backing the provided
+     * {@code String}, if the input is ASCII. Hence, the returned byte array
+     * must not be modified.</b>
      *
      * @param s the string to encode
      * @param cs the charset
-     * @return the encoded bytes
+     * @throws NullPointerException If {@code s} or {@code cs} is null
      * @throws CharacterCodingException for malformed input or unmappable characters
      */
-    byte[] getBytesNoRepl(String s, Charset cs) throws CharacterCodingException;
+    byte[] uncheckedGetBytesOrThrow(String s, Charset cs) throws CharacterCodingException;
 
     /**
-     * Returns a new string by decoding from the given utf8 bytes array.
-     *
-     * @param off the index of the first byte to decode
-     * @param len the number of bytes to decode
-     * @return the newly created string
-     * @throws IllegalArgumentException for malformed or unmappable bytes.
-     */
-    String newStringUTF8NoRepl(byte[] bytes, int off, int len);
-
-    /**
-     * Get the char at index in a byte[] in internal UTF-16 representation,
-     * with no bounds checks.
+     * Get the {@code char} at {@code index} in a {@code byte[]} in internal
+     * UTF-16 representation.
+     * <p>
+     * <b>WARNING: This method does not perform any bound checks.</b>
      *
      * @param bytes the UTF-16 encoded bytes
      * @param index of the char to retrieve, 0 <= index < (bytes.length >> 1)
      * @return the char value
      */
-    char getUTF16Char(byte[] bytes, int index);
+    char uncheckedGetUTF16Char(byte[] bytes, int index);
 
     /**
-     * Put the char at index in a byte[] in internal UTF-16 representation,
-     * with no bounds checks.
+     * Put the {@code ch} at {@code index} in a {@code byte[]} in internal
+     * UTF-16 representation.
+     * <p>
+     * <b>WARNING: This method does not perform any bound checks.</b>
      *
      * @param bytes the UTF-16 encoded bytes
      * @param index of the char to retrieve, 0 <= index < (bytes.length >> 1)
      */
-    void putCharUTF16(byte[] bytes, int index, int ch);
+    void uncheckedPutCharUTF16(byte[] bytes, int index, int ch);
 
     /**
-     * Encode the given string into a sequence of bytes using utf8.
+     * {@return the sequence of bytes obtained by encoding the given string in UTF-8}
      *
      * @param s the string to encode
-     * @return the encoded bytes in utf8
-     * @throws IllegalArgumentException for malformed surrogates
+     * @throws NullPointerException If {@code s} is null
+     * @throws CharacterCodingException For malformed input or unmappable characters
      */
-    byte[] getBytesUTF8NoRepl(String s);
+    byte[] getBytesUTF8OrThrow(String s) throws CharacterCodingException;
 
     /**
-     * Inflated copy from byte[] to char[], as defined by StringLatin1.inflate
+     * Inflated copy from {@code byte[]} to {@code char[]}, as defined by
+     * {@code StringLatin1.inflate}.
+     *
+     * @implSpec Implementations of this method must perform bounds checks.
      */
     void inflateBytesToChars(byte[] src, int srcOff, char[] dst, int dstOff, int len);
 
     /**
      * Decodes ASCII from the source byte array into the destination
      * char array.
+     *
+     * @implSpec Implementations of this method must perform bounds checks.
      *
      * @return the number of bytes successfully decoded, at most len
      */
@@ -408,13 +448,19 @@ public interface JavaLangAccess {
     PrintStream initialSystemErr();
 
     /**
-     * Encodes ASCII codepoints as possible from the source array into
-     * the destination byte array, assuming that the encoding is ASCII
-     * compatible
+     * Encodes as many ASCII codepoints as possible from the source
+     * character array into the destination byte array, assuming that
+     * the encoding is ASCII compatible.
      *
-     * @return the number of bytes successfully encoded, or 0 if none
+     * @param sa the source character array
+     * @param sp the index of the source array to start reading from
+     * @param da the target byte array
+     * @param dp the index of the target array to start writing to
+     * @param len the total number of characters to be encoded
+     * @return the total number of characters successfully encoded
+     * @throws NullPointerException if any of the provided arrays is null
      */
-    int encodeASCII(char[] src, int srcOff, byte[] dst, int dstOff, int len);
+    int encodeASCII(char[] sa, int sp, byte[] da, int dp, int len);
 
     /**
      * Set the cause of Throwable
@@ -433,30 +479,33 @@ public interface JavaLangAccess {
     MethodHandle stringConcatHelper(String name, MethodType methodType);
 
     /**
-     * Prepends constant and the stringly representation of value into buffer,
-     * given the coder and final index. Index is measured in chars, not in bytes!
+     * Creates helper for string concatenation.
+     * <p>
+     * <b>WARNING: The caller of this method shall relinquish and transfer the
+     * ownership of the string array to the callee</b>, since the latter will not
+     * make a copy.
      */
-    long stringConcatHelperPrepend(long indexCoder, byte[] buf, String value);
+    Object uncheckedStringConcat1(String[] constants);
 
     /**
-     * Get the string concat initial coder
+     * Get the string initial coder, When COMPACT_STRINGS is on, it returns 0, and when it is off, it returns 1.
      */
-    long stringConcatInitialCoder();
+    byte stringInitCoder();
 
     /**
-     * Update lengthCoder for constant
+     * Get the Coder of String, which is used by StringConcatFactory to calculate the initCoder of constants
      */
-    long stringConcatMix(long lengthCoder, String constant);
-
-    /**
-     * Mix value length and coder into current length and coder.
-     */
-    long stringConcatMix(long lengthCoder, char value);
+    byte stringCoder(String str);
 
     /**
      * Join strings
      */
     String join(String prefix, String suffix, String delimiter, String[] elements, int size);
+
+    /**
+     * Concatenation of prefix and suffix characters to a String for early bootstrap
+     */
+    String concat(String prefix, Object value, String suffix);
 
     /*
      * Get the class data associated with the given class.
@@ -465,19 +514,11 @@ public interface JavaLangAccess {
      */
     Object classData(Class<?> c);
 
-    int stringSize(long i);
-
-    int getCharsLatin1(long i, int index, byte[] buf);
-
-    int getCharsUTF16(long i, int index, byte[] buf);
-
-    long findNative(ClassLoader loader, String entry);
-
     /**
-     * Direct access to Shutdown.exit to avoid security manager checks
-     * @param statusCode the status code
+     * Returns the {@link NativeLibraries} object associated with the provided class loader.
+     * This is used by {@link SymbolLookup#loaderLookup()}.
      */
-    void exit(int statusCode);
+    NativeLibraries nativeLibrariesFor(ClassLoader loader);
 
     /**
      * Returns an array of all platform threads.
@@ -511,11 +552,6 @@ public interface JavaLangAccess {
     Thread currentCarrierThread();
 
     /**
-     * Executes the given value returning task on the current carrier thread.
-     */
-    <V> V executeOnCarrierThread(Callable<V> task) throws Exception;
-
-    /**
      * Returns the value of the current carrier thread's copy of a thread-local.
      */
     <T> T getCarrierThreadLocal(CarrierThreadLocal<T> local);
@@ -531,12 +567,6 @@ public interface JavaLangAccess {
     void removeCarrierThreadLocal(CarrierThreadLocal<?> local);
 
     /**
-     * Returns {@code true} if there is a value in the current carrier thread's copy of
-     * thread-local, even if that values is {@code null}.
-     */
-    boolean isCarrierThreadLocalPresent(CarrierThreadLocal<?> local);
-
-    /**
      * Returns the current thread's scoped values cache
      */
     Object[] scopedValueCache();
@@ -550,6 +580,16 @@ public interface JavaLangAccess {
      * Return the current thread's scoped value bindings.
      */
     Object scopedValueBindings();
+
+    /**
+     * Returns the native thread ID for the given platform thread or 0 if not set.
+     */
+    long nativeThreadID(Thread thread);
+
+    /**
+     * Sets the native thread ID for the current platform thread.
+     */
+    void setThreadNativeID(long id);
 
     /**
      * Returns the innermost mounted continuation
@@ -589,6 +629,11 @@ public interface JavaLangAccess {
     void unparkVirtualThread(Thread thread);
 
     /**
+     * Returns the virtual thread default scheduler.
+     */
+    Executor virtualThreadDefaultScheduler();
+
+    /**
      * Creates a new StackWalker
      */
     StackWalker newStackWalkerInstance(Set<StackWalker.Option> options,
@@ -603,16 +648,15 @@ public interface JavaLangAccess {
     /**
      * Copy the string bytes to an existing segment, avoiding intermediate copies.
      */
-    void copyToSegmentRaw(String string, MemorySegment segment, long offset);
+    void copyToSegmentRaw(String string, MemorySegment segment, long offset, int srcIndex, int srcLength);
 
     /**
      * Are the string bytes compatible with the given charset?
      */
-    boolean bytesCompatible(String string, Charset charset);
+    boolean bytesCompatible(String string, Charset charset, int srcIndex, int numChars);
 
     /**
-     * Is a security manager already set or allowed to be set
-     * (using -Djava.security.manager=allow)?
+     * Finish initialization of the StackTraceElement objects in a stack trace.
      */
-    boolean allowSecurityManager();
+    void finishInit(StackTraceElement[] stackTrace);
 }
