@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,11 +28,12 @@ package com.sun.tools.javac.launcher;
 import com.sun.source.util.TaskEvent;
 import com.sun.source.util.TaskListener;
 import com.sun.tools.javac.api.JavacTool;
-import com.sun.tools.javac.code.Preview;
+import com.sun.tools.javac.code.Lint.LintCategory;
 import com.sun.tools.javac.file.JavacFileManager;
 import com.sun.tools.javac.resources.LauncherProperties.Errors;
 import com.sun.tools.javac.util.Context;
 import com.sun.tools.javac.util.Context.Factory;
+import com.sun.tools.javac.util.Log;
 
 import javax.tools.JavaFileManager;
 import javax.tools.JavaFileObject;
@@ -120,8 +121,11 @@ final class MemoryContext {
         }
         var opts = options.forProgramCompilation();
         var context = new Context();
-        MemoryPreview.registerInstance(context);
         var task = compiler.getTask(out, memoryFileManager, null, opts, null, units, context);
+
+        // This suppresses diagnostics like "Note: Recompile with -Xlint:preview for details."
+        Log.instance(context).suppressAggregatedWarningNotes(LintCategory.PREVIEW);
+
         var ok = task.call();
         if (!ok) {
             throw new Fault(Errors.CompilationFailed);
@@ -184,10 +188,9 @@ final class MemoryContext {
      * @param parent the class loader to be used as the parent loader
      * @param mainClassName the fully-qualified name of the application class to load
      * @return class loader object able to find and load the desired class
-     * @throws ClassNotFoundException if the class cannot be located
      * @throws Fault if a modular application class is in the unnamed package
      */
-    ClassLoader newClassLoaderFor(ClassLoader parent, String mainClassName) throws ClassNotFoundException, Fault {
+    ClassLoader newClassLoaderFor(ClassLoader parent, String mainClassName) throws Fault {
         var moduleInfoBytes = inMemoryClasses.get("module-info");
         if (moduleInfoBytes == null) {
             // Trivial case: no compiled module descriptor available, no extra module layer required
@@ -209,7 +212,9 @@ final class MemoryContext {
         var modulePathModules = modulePathFinder.findAll().stream().map(ModuleReference::descriptor).map(ModuleDescriptor::name).toList();
         if (!modulePathModules.isEmpty()) {
             var modulePathConfiguration = bootLayer.configuration().resolveAndBind(modulePathFinder, ModuleFinder.of(), Set.copyOf(modulePathModules));
-            var modulePathLayer = ModuleLayer.defineModulesWithOneLoader(modulePathConfiguration, List.of(bootLayer), parent).layer();
+            var modulePathController = ModuleLayer.defineModulesWithOneLoader(modulePathConfiguration, List.of(bootLayer), parent);
+            enableNativeAccess(modulePathController, false);
+            var modulePathLayer = modulePathController.layer();
             parentLayer = modulePathLayer;
             parentLoader = modulePathLayer.findLoader(modulePathModules.getFirst());
         }
@@ -227,6 +232,9 @@ final class MemoryContext {
         var mainClassNamePackageName = mainClassName.substring(0, lastDotInMainClassName);
         memoryController.addOpens(module, mainClassNamePackageName, getClass().getModule());
 
+        // Configure native access for the modular application.
+        enableNativeAccess(memoryController, true);
+
         return memoryLayer.findLoader(applicationModule.name());
     }
 
@@ -239,18 +247,30 @@ final class MemoryContext {
         return ModuleFinder.of(paths.toArray(Path[]::new));
     }
 
-    static class MemoryPreview extends Preview {
-        static void registerInstance(Context context) {
-            context.put(previewKey, (Factory<Preview>)MemoryPreview::new);
-        }
-
-        MemoryPreview(Context context) {
-            super(context);
-        }
-
-        @Override
-        public void reportDeferredDiagnostics() {
-            // suppress diagnostics like "Note: Recompile with -Xlint:preview for details."
+    /**
+     * Grants native access to modules selected using the --enable-native-access
+     * command line option.
+     */
+    @SuppressWarnings("restricted")
+    private void enableNativeAccess(ModuleLayer.Controller controller, boolean shouldWarn) {
+        var layer = controller.layer();
+        for (var name : options.enableNativeAccessForModules()) {
+            if (name.equals("ALL-UNNAMED")) {
+                continue; // was taken care of by module bootstrap
+            }
+            var found = layer.findModule(name);
+            if (found.isEmpty()) {
+                if (shouldWarn) {
+                    // same message as ModuleBootstrap.warnUnknownModule(ENABLE_NATIVE_ACCESS, name);
+                    out.println("WARNING: Unknown module: " + name + " specified to --enable-native-access");
+                }
+                continue;
+            }
+            var module = found.get();
+            if (module.isNativeAccessEnabled()) {
+                continue;
+            }
+            controller.enableNativeAccess(module);
         }
     }
 }
