@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,12 +40,12 @@
 import jdk.test.lib.Platform;
 import jdk.test.lib.process.ProcessTools;
 import jdk.test.lib.process.OutputAnalyzer;
-import jtreg.SkippedException;
 
 public class CompressedClassPointers {
 
     static final String logging_option = "-Xlog:gc+metaspace=trace,metaspace=info,cds=trace";
     static final String reserveCCSAnywhere = "Reserving compressed class space anywhere";
+    static final String usesCompactObjectHeadersPat = "UseCompactObjectHeaders 1";
 
     // Returns true if we are to test the narrow klass base; we only do this on
     // platforms where we can be reasonably shure that we get reproducable placement).
@@ -55,6 +55,11 @@ public class CompressedClassPointers {
         }
         return true;
 
+    }
+
+    // Returns true if the output indicates that the VM uses compact object headers
+    static boolean usesCompactObjectHeaders(OutputAnalyzer output) {
+        return output.getOutput().contains(usesCompactObjectHeadersPat);
     }
 
     // Returns true if the output indicates that the ccs is reserved anywhere.
@@ -212,7 +217,6 @@ public class CompressedClassPointers {
     public static void smallHeapTestNoCoop() throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
-            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:SharedBaseAddress=8g",
             "-Xmx128m",
@@ -221,7 +225,7 @@ public class CompressedClassPointers {
             "-Xlog:cds=trace",
             "-XX:+VerifyBeforeGC", "-version");
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
-        if (!isCCSReservedAnywhere(output)) {
+        if (!isCCSReservedAnywhere(output) && !usesCompactObjectHeaders(output)) {
             output.shouldContain("Narrow klass base: 0x0000000000000000");
         }
         output.shouldHaveExitValue(0);
@@ -230,7 +234,6 @@ public class CompressedClassPointers {
     public static void smallHeapTestWith1GNoCoop() throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
-            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:CompressedClassSpaceSize=1g",
             "-Xmx128m",
@@ -239,10 +242,10 @@ public class CompressedClassPointers {
             "-Xlog:cds=trace",
             "-XX:+VerifyBeforeGC", "-version");
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
-        if (!isCCSReservedAnywhere(output)) {
+        if (!isCCSReservedAnywhere(output) && !usesCompactObjectHeaders(output)) {
             output.shouldContain("Narrow klass base: 0x0000000000000000");
         }
-        if (!Platform.isAArch64() && !Platform.isPPC()) {
+        if (!Platform.isAArch64()  && !usesCompactObjectHeaders(output) && !Platform.isPPC()) {
             // Currently relax this test for Aarch64 and ppc.
             output.shouldContain("Narrow klass shift: 0");
         }
@@ -252,7 +255,6 @@ public class CompressedClassPointers {
     public static void largeHeapTestNoCoop() throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
-            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:+UnlockExperimentalVMOptions",
             "-Xmx30g",
@@ -261,10 +263,10 @@ public class CompressedClassPointers {
             "-Xlog:cds=trace",
             "-XX:+VerifyBeforeGC", "-version");
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
-        if (!isCCSReservedAnywhere(output)) {
+        if (!isCCSReservedAnywhere(output) && !usesCompactObjectHeaders(output)) {
             output.shouldContain("Narrow klass base: 0x0000000000000000");
         }
-        if (!Platform.isAArch64() && !Platform.isPPC()) {
+        if (!Platform.isAArch64()  && !usesCompactObjectHeaders(output) && !Platform.isPPC()) {
             // Currently relax this test for Aarch64 and ppc.
             output.shouldContain("Narrow klass shift: 0");
         }
@@ -274,7 +276,6 @@ public class CompressedClassPointers {
     public static void largePagesTestNoCoop() throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
-            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-Xmx128m",
             "-XX:+UseLargePages",
@@ -285,23 +286,10 @@ public class CompressedClassPointers {
         output.shouldHaveExitValue(0);
     }
 
-    public static void heapBaseMinAddressTestNoCoop() throws Exception {
-        ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
-            "-XX:-UseCompressedOops",
-            "-XX:+UseCompressedClassPointers",
-            "-XX:HeapBaseMinAddress=1m",
-            "-Xlog:gc+heap+coops=debug",
-            "-version");
-        OutputAnalyzer output = new OutputAnalyzer(pb.start());
-        output.shouldContain("HeapBaseMinAddress must be at least");
-        output.shouldHaveExitValue(0);
-    }
-
     public static void sharingTestNoCoop() throws Exception {
         // Test small heaps
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
-            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:SharedArchiveFile=./CompressedClassPointers.jsa",
             "-Xmx128m",
@@ -319,7 +307,6 @@ public class CompressedClassPointers {
 
           pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
-            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:SharedArchiveFile=./CompressedClassPointers.jsa",
             "-Xmx128m",
@@ -350,7 +337,6 @@ public class CompressedClassPointers {
         smallHeapTestWith1GNoCoop();
         largeHeapTestNoCoop();
         largePagesTestNoCoop();
-        heapBaseMinAddressTestNoCoop();
         sharingTestNoCoop();
     }
 }
