@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,35 +23,32 @@
 
 package catalog;
 
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+
+import javax.xml.catalog.CatalogException;
+import javax.xml.catalog.CatalogResolver;
+
 import static catalog.CatalogTestUtils.catalogUriResolver;
 import static catalog.ResolutionChecker.checkUriResolution;
 import static catalog.ResolutionChecker.expectExceptionOnUri;
-
-import javax.xml.catalog.CatalogResolver;
-import javax.xml.catalog.CatalogException;
-
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
-import org.testng.annotations.Test;
 
 /*
  * @test
  * @bug 8077931
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow catalog.DelegateUriTest
- * @run testng/othervm catalog.DelegateUriTest
+ * @run junit/othervm catalog.DelegateUriTest
  * @summary Get matched URIs from delegateURI entries.
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class DelegateUriTest {
 
-    @Test(dataProvider = "uri-matchedUri")
+    @ParameterizedTest
+    @MethodSource("dataOnMatch")
     public void testMatch(String uri, String matchedUri) {
         checkUriResolution(createResolver(), uri, matchedUri);
     }
 
-    @DataProvider(name = "uri-matchedUri")
-    public Object[][] data() {
+    public static Object[][] dataOnMatch() {
         return new Object[][] {
                 // The matched URI of the specified URI reference is defined in
                 // a delegate catalog file of the current catalog file.
@@ -74,14 +71,14 @@ public class DelegateUriTest {
                         "http://local/base/dtd/carl/docCarlDU.dtd"} };
     }
 
-    @Test(dataProvider = "uri-expectedExceptionClass")
+    @ParameterizedTest
+    @MethodSource("dataOnException")
     public void testException(String uri,
             Class<? extends Throwable> expectedExceptionClass) {
         expectExceptionOnUri(createResolver(), uri, expectedExceptionClass);
     }
 
-    @DataProvider(name = "uri-expectedExceptionClass")
-    public Object[][] dataOnException() {
+    public static Object[][] dataOnException() {
         return new Object[][] {
                 // The matched delegateURI entry of the specified URI reference
                 // defines a non-existing delegate catalog file. That should
@@ -95,7 +92,7 @@ public class DelegateUriTest {
                         CatalogException.class } };
     }
 
-    private CatalogResolver createResolver() {
+    private static CatalogResolver createResolver() {
         return catalogUriResolver("delegateUri.xml");
     }
 }
