@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,35 +22,31 @@
  */
 package org.w3c.dom.ptests;
 
-import static org.testng.Assert.assertEquals;
-import static org.w3c.dom.ptests.DOMTestUtil.createDOM;
-
-import java.io.IOException;
-
-import javax.xml.parsers.ParserConfigurationException;
-
-import org.testng.annotations.Listeners;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
 import org.w3c.dom.Document;
 import org.w3c.dom.NamedNodeMap;
 import org.w3c.dom.Notation;
 import org.xml.sax.SAXException;
 
+import javax.xml.parsers.ParserConfigurationException;
+import java.io.IOException;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.w3c.dom.ptests.DOMTestUtil.createDOM;
+
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow org.w3c.dom.ptests.NotationTest
- * @run testng/othervm org.w3c.dom.ptests.NotationTest
+ * @run junit/othervm org.w3c.dom.ptests.NotationTest
  * @summary Test for Notation interface
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class NotationTest {
     /*
      * Test getSystemId method.
      */
     @Test
     public void testGetSystemId() throws Exception {
-        assertEquals(findNotation("gs").getSystemId(), "http://who.knows.where/");
+        assertEquals("http://who.knows.where/", findNotation("gs").getSystemId());
     }
 
     /*
@@ -58,7 +54,7 @@ public class NotationTest {
      */
     @Test
     public void testGetPublicId() throws Exception {
-        assertEquals(findNotation("pubname").getPublicId(), "pubId");
+        assertEquals("pubId", findNotation("pubname").getPublicId());
     }
 
     //find notation in Notation01.xml
