@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,27 +22,25 @@
  */
 package org.xml.sax.ptests;
 
-import static jaxp.library.JAXPTestUtilities.USER_DIR;
-import static jaxp.library.JAXPTestUtilities.compareWithGold;
-import static org.testng.Assert.assertTrue;
-import static org.xml.sax.ptests.SAXTestConst.GOLDEN_DIR;
-import static org.xml.sax.ptests.SAXTestConst.XML_DIR;
-
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
-
-import javax.xml.parsers.SAXParser;
-import javax.xml.parsers.SAXParserFactory;
-
-import org.testng.annotations.Listeners;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
 import org.xml.sax.Attributes;
 import org.xml.sax.Locator;
 import org.xml.sax.SAXException;
 import org.xml.sax.SAXParseException;
 import org.xml.sax.helpers.DefaultHandler;
+
+import javax.xml.parsers.SAXParser;
+import javax.xml.parsers.SAXParserFactory;
+import java.io.BufferedWriter;
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+
+import static org.junit.jupiter.api.Assertions.assertLinesMatch;
+import static org.xml.sax.ptests.SAXTestConst.GOLDEN_DIR;
+import static org.xml.sax.ptests.SAXTestConst.XML_DIR;
 
 /**
  * XMLReader parse XML with default handler that transverses XML and
@@ -51,10 +49,8 @@ import org.xml.sax.helpers.DefaultHandler;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow org.xml.sax.ptests.DefaultHandlerTest
- * @run testng/othervm org.xml.sax.ptests.DefaultHandlerTest
+ * @run junit/othervm org.xml.sax.ptests.DefaultHandlerTest
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class DefaultHandlerTest {
     /**
      * Test default handler that transverses XML and  print all visited node.
@@ -63,7 +59,7 @@ public class DefaultHandlerTest {
      */
     @Test
     public void testDefaultHandler() throws Exception {
-        String outputFile = USER_DIR + "DefaultHandler.out";
+        String outputFile = "DefaultHandler.out";
         String goldFile = GOLDEN_DIR + "DefaultHandlerGF.out";
         String xmlFile = XML_DIR + "namespace1.xml";
 
@@ -78,9 +74,9 @@ public class DefaultHandlerTest {
         if (File.separatorChar == '\\')
                 newAbsolutePath = Absolutepath.replace('\\', '/');
         saxparser.parse("file:///" + newAbsolutePath, handler);
-
-        assertTrue(compareWithGold(goldFile, outputFile));
-
+        assertLinesMatch(
+                Files.readAllLines(Path.of(goldFile)),
+                Files.readAllLines(Path.of(outputFile)));
     }
 }
 
@@ -111,7 +107,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write characters tag along with content of characters when meet
      * characters event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void characters(char[] ch, int start, int length) throws SAXException {
@@ -121,7 +116,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write endDocument tag then flush the content and close the file when meet
      * endDocument event.
-     * @throws IOException error happen when writing file or closing file.
      */
     @Override
     public void endDocument() throws SAXException {
@@ -137,7 +131,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write endElement tag with namespaceURI, localName, qName to the file when
      * meet endElement event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void endElement(String namespaceURI,String localName,String qName) throws SAXException{
@@ -148,7 +141,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write endPrefixMapping tag along with prefix to the file when meet
      * endPrefixMapping event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void endPrefixMapping(String prefix) throws SAXException {
@@ -158,7 +150,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write error tag along with exception to the file when meet recoverable
      * error event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void error(SAXParseException e) throws SAXException {
@@ -168,7 +159,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write fatalError tag along with exception to the file when meet
      * unrecoverable error event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void fatalError(SAXParseException e) throws SAXException {
@@ -177,7 +167,6 @@ class MyDefaultHandler extends DefaultHandler {
 
     /**
      * Write warning tag along with exception to the file when meet warning event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void warning(SAXParseException e) throws SAXException {
@@ -187,7 +176,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write ignorableWhitespace tag along with white spaces when meet
      * ignorableWhitespace event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void ignorableWhitespace(char[] ch, int start, int length) throws SAXException {
@@ -199,7 +187,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write processingInstruction tag along with target name and target data
      * when meet processingInstruction event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void processingInstruction(String target, String data) throws SAXException {
@@ -219,7 +206,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write skippedEntity tag along with entity name when meet skippedEntity
      * event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void skippedEntity(String name) throws SAXException {
@@ -228,7 +214,6 @@ class MyDefaultHandler extends DefaultHandler {
 
     /**
      * Write startDocument tag when meet startDocument event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void startDocument() throws SAXException {
@@ -238,7 +223,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write startElement tag along with namespaceURI, localName, qName, number
      * of attributes and line number when meet startElement event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void startElement(String namespaceURI, String localName,
@@ -251,7 +235,6 @@ class MyDefaultHandler extends DefaultHandler {
     /**
      * Write startPrefixMapping tag along with prefix and uri when meet
      * startPrefixMapping event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void startPrefixMapping(String prefix, String uri) throws SAXException {
