@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,7 +33,6 @@ import javax.xml.validation.Schema;
 import javax.xml.validation.SchemaFactory;
 
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.Node;
 import org.xml.sax.InputSource;
@@ -42,11 +41,9 @@ import org.xml.sax.InputSource;
  * @test
  * @bug 4971605
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow validation.Bug4971605
  * @run testng/othervm validation.Bug4971605
  * @summary Test SchemaFactory.newSchema(Source) returns a Schema instance for DOMSource.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class Bug4971605 {
 
     @Test
