@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,13 +25,13 @@
  * @test
  * @bug 6256805
  * @summary Tests invalid XML characters encoding
- * @run main/othervm -Djava.security.manager=allow Test6256805
+ * @run main/othervm Test6256805
  * @author Sergey Malenkov
  */
 
 public final class Test6256805 extends AbstractTest {
     public static void main(String[] args) {
-        new Test6256805().test(true);
+        new Test6256805().test();
     }
 
     protected CharacterBean getObject() {
