@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@
  * @bug 6402062 6487891
  * @summary Tests ScrollPane encoding
  * @key headful
- * @run main/othervm -Djava.security.manager=allow java_awt_ScrollPane
+ * @run main/othervm java_awt_ScrollPane
  * @author Sergey Malenkov
  */
 
@@ -34,7 +34,7 @@ import java.awt.ScrollPane;
 
 public final class java_awt_ScrollPane extends AbstractTest<ScrollPane> {
     public static void main(String[] args) {
-        new java_awt_ScrollPane().test(true);
+        new java_awt_ScrollPane().test();
     }
 
     protected ScrollPane getObject() {
