@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 6402062 6487891
  * @summary Tests TitledBorderUIResource encoding
- * @run main/othervm -Djava.security.manager=allow javax_swing_plaf_BorderUIResource_TitledBorderUIResource
+ * @run main/othervm javax_swing_plaf_BorderUIResource_TitledBorderUIResource
  * @author Sergey Malenkov
  */
 
@@ -37,7 +37,7 @@ import javax.swing.plaf.BorderUIResource.TitledBorderUIResource;
 
 public final class javax_swing_plaf_BorderUIResource_TitledBorderUIResource extends AbstractTest<TitledBorderUIResource> {
     public static void main(String[] args) {
-        new javax_swing_plaf_BorderUIResource_TitledBorderUIResource().test(true);
+        new javax_swing_plaf_BorderUIResource_TitledBorderUIResource().test();
     }
 
     protected TitledBorderUIResource getObject() {
