@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,33 +22,32 @@
  */
 
 /*
- * @test
+ * @test id=POSIX_SPAWN
  * @bug 4199068 4738465 4937983 4930681 4926230 4931433 4932663 4986689
  *      5026830 5023243 5070673 4052517 4811767 6192449 6397034 6413313
  *      6464154 6523983 6206031 4960438 6631352 6631966 6850957 6850958
  *      4947220 7018606 7034570 4244896 5049299 8003488 8054494 8058464
  *      8067796 8224905 8263729 8265173 8272600 8231297 8282219 8285517
+ *      8352533 8368192 8377907
  * @key intermittent
  * @summary Basic tests for Process and Environment Variable code
  * @modules java.base/java.lang:open
  *          java.base/java.io:open
- *          java.base/jdk.internal.misc
- * @requires !vm.musl
  * @requires vm.flagless
  * @library /test/lib
- * @run main/othervm/native/timeout=300 -Djava.security.manager=allow Basic
- * @run main/othervm/native/timeout=300 -Djava.security.manager=allow -Djdk.lang.Process.launchMechanism=fork Basic
+ * @run main/othervm/native/timeout=360 -Djdk.lang.Process.launchMechanism=posix_spawn Basic
  * @author Martin Buchholz
  */
 
 /*
- * @test
+ * @test id=FORK
+ * @key intermittent
+ * @summary Basic tests for Process and Environment Variable code
  * @modules java.base/java.lang:open
  *          java.base/java.io:open
- *          java.base/jdk.internal.misc
- * @requires (os.family == "linux" & !vm.musl)
+ * @requires vm.flagless
  * @library /test/lib
- * @run main/othervm/timeout=300 -Djava.security.manager=allow -Djdk.lang.Process.launchMechanism=posix_spawn Basic
+ * @run main/othervm/native/timeout=360 -Djdk.lang.Process.launchMechanism=fork Basic
  */
 
 import java.lang.ProcessBuilder.Redirect;
@@ -56,7 +55,6 @@ import java.lang.ProcessHandle;
 import static java.lang.ProcessBuilder.Redirect.*;
 
 import java.io.*;
-import java.lang.reflect.Field;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -65,7 +63,6 @@ import java.nio.file.StandardCopyOption;
 import java.util.*;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
-import java.security.*;
 import java.util.regex.Pattern;
 import java.util.regex.Matcher;
 import static java.lang.System.getenv;
@@ -87,8 +84,9 @@ public class Basic {
     static final String libpath = System.getenv("LIBPATH");
 
     /* Used for regex String matching for long error messages */
-    static final String PERMISSION_DENIED_ERROR_MSG = "(Permission denied|error=13)";
-    static final String NO_SUCH_FILE_ERROR_MSG = "(No such file|error=2)";
+    static final String PERMISSION_DENIED_ERROR_MSG = "(Permission denied|error:13)";
+    static final String NO_SUCH_FILE_ERROR_MSG = "(No such file|error:2)";
+    static final String SPAWNHELPER_FAILURE_MSG = "(Possible reasons:)";
 
     /**
      * Returns the number of milliseconds since time given by
@@ -209,11 +207,11 @@ public class Basic {
 
     private static final Runtime runtime = Runtime.getRuntime();
 
-    private static final String[] winEnvCommand = {"cmd.exe", "/c", "set"};
+    private static final String[] winEnvCommand = {"cmd.exe", "/d", "/c", "set"};
 
     private static String winEnvFilter(String env) {
         return env.replaceAll("\r", "")
-            .replaceAll("(?m)^(?:COMSPEC|PROMPT|PATHEXT)=.*\n","");
+            .replaceAll("(?m)^(?:COMSPEC|PROMPT|PATHEXT|PROCESSOR_ARCHITECTURE)=.*\n","");
     }
 
     private static String unixEnvProg() {
@@ -321,7 +319,9 @@ public class Basic {
         } catch (IOException e) {
             String m = e.getMessage();
             if (EnglishUnix.is() &&
-                ! matches(m, PERMISSION_DENIED_ERROR_MSG))
+                !matches(m, PERMISSION_DENIED_ERROR_MSG))
+                unexpected(e);
+            if (matches(m, SPAWNHELPER_FAILURE_MSG))
                 unexpected(e);
         } catch (Throwable t) { unexpected(t); }
     }
@@ -336,7 +336,7 @@ public class Basic {
             } else if (action.equals("testIO")) {
                 String expected = "standard input";
                 char[] buf = new char[expected.length()+1];
-                int n = new InputStreamReader(System.in).read(buf,0,buf.length);
+                int n = new InputStreamReader(System.in, System.getProperty("stdin.encoding")).read(buf,0,buf.length);
                 if (n != expected.length())
                     System.exit(5);
                 if (! new String(buf,0,n).equals(expected))
@@ -431,7 +431,9 @@ public class Basic {
                         } catch (IOException e) {
                             String m = e.getMessage();
                             if (EnglishUnix.is() &&
-                                ! matches(m, NO_SUCH_FILE_ERROR_MSG))
+                                !matches(m, NO_SUCH_FILE_ERROR_MSG))
+                                unexpected(e);
+                            if (matches(m, SPAWNHELPER_FAILURE_MSG))
                                 unexpected(e);
                         } catch (Throwable t) { unexpected(t); }
 
@@ -444,7 +446,9 @@ public class Basic {
                         } catch (IOException e) {
                             String m = e.getMessage();
                             if (EnglishUnix.is() &&
-                                ! matches(m, NO_SUCH_FILE_ERROR_MSG))
+                                !matches(m, NO_SUCH_FILE_ERROR_MSG))
+                                unexpected(e);
+                            if (matches(m, SPAWNHELPER_FAILURE_MSG))
                                 unexpected(e);
                         } catch (Throwable t) { unexpected(t); }
 
@@ -691,7 +695,7 @@ public class Basic {
         public static String path() { return path; }
         private static final String path = path0();
         private static String path0(){
-            if (!Platform.isBusybox("/bin/true")) {
+            if (!Files.isSymbolicLink(Paths.get("/bin/true"))) {
                 return "/bin/true";
             } else {
                 File trueExe = new File("true");
@@ -706,7 +710,7 @@ public class Basic {
         public static String path() { return path; }
         private static final String path = path0();
         private static String path0(){
-            if (!Platform.isBusybox("/bin/false")) {
+            if (!Files.isSymbolicLink(Paths.get("/bin/false"))) {
                 return "/bin/false";
             } else {
                 File falseExe = new File("false");
@@ -772,30 +776,29 @@ public class Basic {
         return Pattern.compile(regex).matcher(str).find();
     }
 
-    private static String matchAndExtract(String str, String regex) {
-        Matcher matcher = Pattern.compile(regex).matcher(str);
-        if (matcher.find()) {
-            return matcher.group();
-        } else {
-            return "";
-        }
+    // Return the string with the matching regex removed
+    private static String matchAndRemove(String str, String regex) {
+        return Pattern.compile(regex)
+                .matcher(str)
+                .replaceAll("");
     }
 
     /* Only used for Mac OS X --
-     * Mac OS X (may) add the variable __CF_USER_TEXT_ENCODING to an empty
-     * environment. The environment variable JAVA_MAIN_CLASS_<pid> may also
-     * be set in Mac OS X.
-     * Remove them both from the list of env variables
+     * Mac OS X (may) add the variables: __CF_USER_TEXT_ENCODING, JAVA_MAIN_CLASS_<pid>,
+     * and TMPDIR.
+     * Remove them from the list of env variables
      */
     private static String removeMacExpectedVars(String vars) {
         // Check for __CF_USER_TEXT_ENCODING
-        String cleanedVars = vars.replace("__CF_USER_TEXT_ENCODING="
-                                            +cfUserTextEncoding+",","");
+        String cleanedVars = matchAndRemove(vars,
+                "__CF_USER_TEXT_ENCODING=" + cfUserTextEncoding + ",");
         // Check for JAVA_MAIN_CLASS_<pid>
-        String javaMainClassStr
-                = matchAndExtract(cleanedVars,
-                                    "JAVA_MAIN_CLASS_\\d+=Basic.JavaChild,");
-        return cleanedVars.replace(javaMainClassStr,"");
+        cleanedVars = matchAndRemove(cleanedVars,
+                "JAVA_MAIN_CLASS_\\d+=Basic.JavaChild,");
+        // Check and remove TMPDIR
+        cleanedVars = matchAndRemove(cleanedVars,
+                "TMPDIR=[^,]*,");
+        return cleanedVars;
     }
 
     /* Only used for AIX --
@@ -804,6 +807,14 @@ public class Basic {
      */
     private static String removeAixExpectedVars(String vars) {
         return vars.replace("AIXTHREAD_GUARDPAGES=0,", "");
+    }
+
+    /* Only used for Windows AArch64 --
+     * Windows AArch64 adds the variable PROCESSOR_ARCHITECTURE=ARM64 to the environment.
+     * Remove it from the list of env variables
+     */
+    private static String removeWindowsAArch64ExpectedVars(String vars) {
+        return vars.replace("PROCESSOR_ARCHITECTURE=ARM64,", "");
     }
 
     private static String sortByLinesWindowsly(String text) {
@@ -1220,74 +1231,17 @@ public class Basic {
         }
 
         //----------------------------------------------------------------
-        // Test security implications of I/O redirection
+        // Default: should go to pipes (use a fresh ProcessBuilder)
         //----------------------------------------------------------------
-
-        // Read access to current directory is always granted;
-        // So create a tmpfile for input instead.
-        final File tmpFile = File.createTempFile("Basic", "tmp");
-        setFileContents(tmpFile, "standard input");
-
-        final Policy policy = new Policy();
-        Policy.setPolicy(policy);
-        System.setSecurityManager(new SecurityManager());
-        try {
-            final Permission xPermission
-                = new FilePermission("<<ALL FILES>>", "execute");
-            final Permission rxPermission
-                = new FilePermission("<<ALL FILES>>", "read,execute");
-            final Permission wxPermission
-                = new FilePermission("<<ALL FILES>>", "write,execute");
-            final Permission rwxPermission
-                = new FilePermission("<<ALL FILES>>", "read,write,execute");
-
-            THROWS(SecurityException.class,
-                   () -> { policy.setPermissions(xPermission);
-                           redirectIO(pb, from(tmpFile), PIPE, PIPE);
-                           pb.start();},
-                   () -> { policy.setPermissions(rxPermission);
-                           redirectIO(pb, PIPE, to(ofile), PIPE);
-                           pb.start();},
-                   () -> { policy.setPermissions(rxPermission);
-                           redirectIO(pb, PIPE, PIPE, to(efile));
-                           pb.start();});
-
-            {
-                policy.setPermissions(rxPermission);
-                redirectIO(pb, from(tmpFile), PIPE, PIPE);
-                ProcessResults r = run(pb);
-                equal(r.out(), "standard output");
-                equal(r.err(), "standard error");
-            }
-
-            {
-                policy.setPermissions(wxPermission);
-                redirectIO(pb, PIPE, to(ofile), to(efile));
-                Process p = pb.start();
-                new PrintStream(p.getOutputStream()).print("standard input");
-                p.getOutputStream().close();
-                ProcessResults r = run(p);
-                policy.setPermissions(rwxPermission);
-                equal(fileContents(ofile), "standard output");
-                equal(fileContents(efile), "standard error");
-            }
-
-            {
-                policy.setPermissions(rwxPermission);
-                redirectIO(pb, from(tmpFile), to(ofile), to(efile));
-                ProcessResults r = run(pb);
-                policy.setPermissions(rwxPermission);
-                equal(fileContents(ofile), "standard output");
-                equal(fileContents(efile), "standard error");
-            }
-
-        } finally {
-            policy.setPermissions(new RuntimePermission("setSecurityManager"));
-            System.setSecurityManager(null);
-            tmpFile.delete();
-            ifile.delete();
-            ofile.delete();
-            efile.delete();
+        {
+            ProcessBuilder pb2 = new ProcessBuilder(childArgs);
+            Process p = pb2.start();
+            new PrintStream(p.getOutputStream()).print("standard input");
+            p.getOutputStream().close();
+            ProcessResults r = run(p);
+            equal(r.exitValue(), 0);
+            equal(r.out, "standard output");
+            equal(r.err, "standard error");
         }
     }
 
@@ -1326,6 +1280,8 @@ public class Basic {
             System.out.println("This appears to be a Unix system.");
         if (UnicodeOS.is())
             System.out.println("This appears to be a Unicode-based OS.");
+
+        System.out.println("Using:" + System.getProperty("jdk.lang.Process.launchMechanism"));
 
         try { testIORedirection(); }
         catch (Throwable t) { unexpected(t); }
@@ -1386,6 +1342,9 @@ public class Basic {
             }
             if (AIX.is()) {
                 result = removeAixExpectedVars(result);
+            }
+            if (Windows.is() && Platform.isAArch64()) {
+                result = removeWindowsAArch64ExpectedVars(result);
             }
             equal(result, expected);
         } catch (Throwable t) { unexpected(t); }
@@ -1899,6 +1858,9 @@ public class Basic {
             if (AIX.is()) {
                 commandOutput = removeAixExpectedVars(commandOutput);
             }
+            if (Windows.is() && Platform.isAArch64()) {
+                commandOutput = removeWindowsAArch64ExpectedVars(commandOutput);
+            }
             equal(commandOutput, expected);
             if (Windows.is()) {
                 ProcessBuilder pb = new ProcessBuilder(childArgs);
@@ -1906,7 +1868,11 @@ public class Basic {
                 pb.environment().put("SystemRoot", systemRoot);
                 pb.environment().put("=ExitValue", "3");
                 pb.environment().put("=C:", "\\");
-                equal(commandOutput(pb), expected);
+                commandOutput = commandOutput(pb);
+                if (Platform.isAArch64()) {
+                    commandOutput = removeWindowsAArch64ExpectedVars(commandOutput);
+                }
+                equal(commandOutput, expected);
             }
         } catch (Throwable t) { unexpected(t); }
 
@@ -1914,7 +1880,9 @@ public class Basic {
         // Test Runtime.exec(...envp...) with envstrings without any `='
         //----------------------------------------------------------------
         try {
-            String[] cmdp = {"echo"};
+            // In Windows CMD (`cmd.exe`), `echo/` outputs a newline (i.e., an empty line).
+            // Wrapping it with `cmd.exe /c` ensures compatibility in both native Windows and Cygwin environments.
+            String[] cmdp = Windows.is() ? new String[]{"cmd.exe", "/c", "echo/"} : new String[]{"echo"};
             String[] envp = {"Hello", "World"}; // Yuck!
             Process p = Runtime.getRuntime().exec(cmdp, envp);
             equal(commandOutput(p), "\n");
@@ -1955,6 +1923,9 @@ public class Basic {
             }
             if (AIX.is()) {
                 commandOutput = removeAixExpectedVars(commandOutput);
+            }
+            if (Windows.is() && Platform.isAArch64()) {
+                commandOutput = removeWindowsAArch64ExpectedVars(commandOutput);
             }
             check(commandOutput.equals(Windows.is()
                     ? "LC_ALL=C,SystemRoot="+systemRoot+","
@@ -2050,6 +2021,8 @@ public class Basic {
             if (EnglishUnix.is() &&
                 ! matches(m, NO_SUCH_FILE_ERROR_MSG))
                 unexpected(e);
+            if (matches(m, SPAWNHELPER_FAILURE_MSG))
+                unexpected(e);
         } catch (Throwable t) { unexpected(t); }
 
         //----------------------------------------------------------------
@@ -2067,6 +2040,8 @@ public class Basic {
                     || (EnglishUnix.is() &&
                         ! matches(m, NO_SUCH_FILE_ERROR_MSG)))
                     unexpected(e);
+                if (matches(m, SPAWNHELPER_FAILURE_MSG))
+                    unexpected(e);
             } catch (Throwable t) { unexpected(t); }
 
         //----------------------------------------------------------------
@@ -2082,6 +2057,8 @@ public class Basic {
             if (! matches(m, "in directory")
                 || (EnglishUnix.is() &&
                     ! matches(m, NO_SUCH_FILE_ERROR_MSG)))
+                unexpected(e);
+            if (matches(m, SPAWNHELPER_FAILURE_MSG))
                 unexpected(e);
         } catch (Throwable t) { unexpected(t); }
 
@@ -2141,8 +2118,9 @@ public class Basic {
                         op.f();
                         fail();
                     } catch (IOException expected) {
-                        check(expected.getMessage()
-                              .matches("[Ss]tream [Cc]losed"));
+                        String m = expected.getMessage();
+                        check(m.matches("[Ss]tream [Cc]losed"));
+                        check(!matches(m, SPAWNHELPER_FAILURE_MSG));
                     }
                 }
             }
@@ -2194,8 +2172,12 @@ public class Basic {
                             }
                             equal(-1, r);
                         } catch (IOException ioe) {
-                            if (!ioe.getMessage().equals("Stream closed")) {
+                            String m = ioe.getMessage();
+                            if (!m.equals("Stream closed")) {
                                 // BufferedInputStream may throw IOE("Stream closed").
+                                unexpected(ioe);
+                            }
+                            if (matches(m, SPAWNHELPER_FAILURE_MSG)) {
                                 unexpected(ioe);
                             }
                         } catch (Throwable t) { unexpected(t); }}};
@@ -2251,6 +2233,9 @@ public class Basic {
                                 ! (msg.matches(".*Bad file.*") ||
                                         msg.matches(".*Stream closed.*")))
                                 unexpected(e);
+                            if (matches(msg, SPAWNHELPER_FAILURE_MSG)) {
+                                unexpected(e);
+                            }
                         }
                         catch (Throwable t) { unexpected(t); }}};
                 reader.setDaemon(true);
@@ -2343,92 +2328,12 @@ public class Basic {
             if (EnglishUnix.is() &&
                 ! matches(m, PERMISSION_DENIED_ERROR_MSG))
                 unexpected(e);
+            if (matches(m, SPAWNHELPER_FAILURE_MSG)) {
+                unexpected(e);
+            }
         } catch (Throwable t) { unexpected(t); }
 
         new File("emptyCommand").delete();
-
-        //----------------------------------------------------------------
-        // Check for correct security permission behavior
-        //----------------------------------------------------------------
-        final Policy policy = new Policy();
-        Policy.setPolicy(policy);
-        System.setSecurityManager(new SecurityManager());
-
-        try {
-            // No permissions required to CREATE a ProcessBuilder
-            policy.setPermissions(/* Nothing */);
-            new ProcessBuilder("env").directory(null).directory();
-            new ProcessBuilder("env").directory(new File("dir")).directory();
-            new ProcessBuilder("env").command("??").command();
-        } catch (Throwable t) { unexpected(t); }
-
-        THROWS(SecurityException.class,
-               () -> { policy.setPermissions(/* Nothing */);
-                       System.getenv("foo");},
-               () -> { policy.setPermissions(/* Nothing */);
-                       System.getenv();},
-               () -> { policy.setPermissions(/* Nothing */);
-                       new ProcessBuilder("echo").start();},
-               () -> { policy.setPermissions(/* Nothing */);
-                       Runtime.getRuntime().exec("echo");},
-               () -> { policy.setPermissions(
-                               new RuntimePermission("getenv.bar"));
-                       System.getenv("foo");});
-
-        try {
-            policy.setPermissions(new RuntimePermission("getenv.foo"));
-            System.getenv("foo");
-
-            policy.setPermissions(new RuntimePermission("getenv.*"));
-            System.getenv("foo");
-            System.getenv();
-            new ProcessBuilder().environment();
-        } catch (Throwable t) { unexpected(t); }
-
-
-        final Permission execPermission
-            = new FilePermission("<<ALL FILES>>", "execute");
-
-        THROWS(SecurityException.class,
-               () -> { // environment permission by itself insufficient
-                       policy.setPermissions(new RuntimePermission("getenv.*"));
-                       ProcessBuilder pb = new ProcessBuilder("env");
-                       pb.environment().put("foo","bar");
-                       pb.start();},
-               () -> { // exec permission by itself insufficient
-                       policy.setPermissions(execPermission);
-                       ProcessBuilder pb = new ProcessBuilder("env");
-                       pb.environment().put("foo","bar");
-                       pb.start();});
-
-        try {
-            // Both permissions? OK.
-            policy.setPermissions(new RuntimePermission("getenv.*"),
-                                  execPermission);
-            ProcessBuilder pb = new ProcessBuilder("env");
-            pb.environment().put("foo","bar");
-            Process p = pb.start();
-            closeStreams(p);
-        } catch (IOException e) { // OK
-        } catch (Throwable t) { unexpected(t); }
-
-        try {
-            // Don't need environment permission unless READING environment
-            policy.setPermissions(execPermission);
-            Runtime.getRuntime().exec("env", new String[]{});
-        } catch (IOException e) { // OK
-        } catch (Throwable t) { unexpected(t); }
-
-        try {
-            // Don't need environment permission unless READING environment
-            policy.setPermissions(execPermission);
-            new ProcessBuilder("env").start();
-        } catch (IOException e) { // OK
-        } catch (Throwable t) { unexpected(t); }
-
-        // Restore "normal" state without a security manager
-        policy.setPermissions(new RuntimePermission("setSecurityManager"));
-        System.setSecurityManager(null);
 
         //----------------------------------------------------------------
         // Check that Process.isAlive() &
@@ -2704,38 +2609,6 @@ public class Basic {
         } catch (Throwable t) { unexpected(t); }
     }
 
-    //----------------------------------------------------------------
-    // A Policy class designed to make permissions fiddling very easy.
-    //----------------------------------------------------------------
-    @SuppressWarnings("removal")
-    private static class Policy extends java.security.Policy {
-        static final java.security.Policy DEFAULT_POLICY = java.security.Policy.getPolicy();
-
-        private Permissions perms;
-
-        public void setPermissions(Permission...permissions) {
-            perms = new Permissions();
-            for (Permission permission : permissions)
-                perms.add(permission);
-        }
-
-        public Policy() { setPermissions(/* Nothing */); }
-
-        public PermissionCollection getPermissions(CodeSource cs) {
-            return perms;
-        }
-
-        public PermissionCollection getPermissions(ProtectionDomain pd) {
-            return perms;
-        }
-
-        public boolean implies(ProtectionDomain pd, Permission p) {
-            return perms.implies(p) || DEFAULT_POLICY.implies(pd, p);
-        }
-
-        public void refresh() {}
-    }
-
     private static class StreamAccumulator extends Thread {
         private final InputStream is;
         private final StringBuilder sb = new StringBuilder();
@@ -2863,17 +2736,6 @@ public class Basic {
                 else unexpected(t);}}
 
     static boolean isLocked(BufferedInputStream bis) throws Exception {
-        Field lockField = BufferedInputStream.class.getDeclaredField("lock");
-        lockField.setAccessible(true);
-        var lock = (jdk.internal.misc.InternalLock) lockField.get(bis);
-        if (lock != null) {
-            if (lock.tryLock()) {
-                lock.unlock();
-                return false;
-            } else {
-                return true;
-            }
-        }
         return new Thread() {
             volatile boolean unlocked;
 
