@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,7 +29,7 @@
  * @library /java/nio/file
  * @modules jdk.compiler
  *          jdk.zipfs
- * @run testng LogGeneratedClassesTest
+ * @run junit LogGeneratedClassesTest
  * @summary tests logging generated classes for lambda
  */
 import java.io.IOException;
@@ -40,27 +40,29 @@ import java.util.function.Predicate;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.FileStore;
 import java.nio.file.attribute.PosixFileAttributeView;
 
 import jdk.test.lib.compiler.CompilerUtils;
 import jdk.test.lib.process.OutputAnalyzer;
-import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeClass;
-import org.testng.annotations.Test;
 
 import static java.nio.file.attribute.PosixFilePermissions.*;
 import static jdk.test.lib.process.ProcessTools.*;
-import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertFalse;
-import static org.testng.Assert.assertTrue;
+import org.junit.jupiter.api.AfterAll;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import org.junit.jupiter.api.Assumptions;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 public class LogGeneratedClassesTest {
     static final Path DUMP_LAMBDA_PROXY_CLASS_FILES = Path.of("DUMP_LAMBDA_PROXY_CLASS_FILES");
     static final Path CLASSES = Path.of("classes").toAbsolutePath();
-    String longFQCN;
+    static String longFQCN;
 
-    @BeforeClass
-    public void setup() throws IOException {
+    @BeforeAll
+    public static void setup() throws IOException {
         final List<String> scratch = new ArrayList<>();
         scratch.clear();
         scratch.add("package com.example;");
@@ -69,7 +71,6 @@ public class LogGeneratedClassesTest {
         scratch.add("        int foo();");
         scratch.add("    }");
         scratch.add("    public static void main(String[] args) {");
-        scratch.add("        System.setSecurityManager(new SecurityManager());");
         scratch.add("        I lam = () -> 10;");
         scratch.add("        Runnable r = () -> {");
         scratch.add("            System.out.println(\"Runnable\");");
@@ -101,8 +102,8 @@ public class LogGeneratedClassesTest {
         CompilerUtils.compile(Path.of("."), CLASSES);
     }
 
-    @AfterClass
-    public void cleanup() throws IOException {
+    @AfterAll
+    public static void cleanup() throws IOException {
         Files.delete(Paths.get("TestLambda.java"));
         Files.delete(Paths.get("LongPackageName.java"));
         TestUtil.removeAll(DUMP_LAMBDA_PROXY_CLASS_FILES);
@@ -115,7 +116,6 @@ public class LogGeneratedClassesTest {
     public void testNotLogging() throws Exception {
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                "-cp", CLASSES.toString(),
-                               "-Djava.security.manager=allow",
                                "com.example.TestLambda");
         executeProcess(pb).shouldHaveExitValue(0);
     }
@@ -127,18 +127,16 @@ public class LogGeneratedClassesTest {
         Files.createDirectory(testDir);
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                "-cp", CLASSES.toString(),
-                               "-Djava.security.manager=allow",
                                "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                "com.example.TestLambda").directory(testDir.toFile());
         executeProcess(pb).shouldHaveExitValue(0);
 
         // 2 our own class files. We don't care about the others
-        assertEquals(Files.find(
-                        dumpDir,
-                        99,
-                        (p, a) -> p.startsWith(dumpDir.resolve("com/example"))
-                                && a.isRegularFile()).count(),
-                        2, "Two lambda captured");
+        assertEquals(2, Files.find(
+                dumpDir,
+                99,
+                (p, a) -> p.startsWith(dumpDir.resolve("com/example"))
+                        && a.isRegularFile()).count(), "Two lambda captured");
     }
 
     @Test
@@ -151,18 +149,16 @@ public class LogGeneratedClassesTest {
 
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                 "-cp", CLASSES.toString(),
-                                "-Djava.security.manager=allow",
                                 "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                 "com.example.TestLambda").directory(testDir.toFile());
         executeProcess(pb).shouldHaveExitValue(0);
 
         // The dump directory will be created if not exist
-        assertEquals(Files.find(
-                        dumpDir,
-                        99,
-                        (p, a) -> p.startsWith(dumpDir.resolve("com/example"))
-                                && a.isRegularFile()).count(),
-                        2, "Two lambda captured");
+        assertEquals(2, Files.find(
+                dumpDir,
+                99,
+                (p, a) -> p.startsWith(dumpDir.resolve("com/example"))
+                        && a.isRegularFile()).count(), "Two lambda captured");
     }
 
     @Test
@@ -174,7 +170,6 @@ public class LogGeneratedClassesTest {
         assertTrue(Files.isRegularFile(dumpFile));
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                 "-cp", CLASSES.toString(),
-                                "-Djava.security.manager=allow",
                                 "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                 "com.example.TestLambda").directory(testDir.toFile());
         executeProcess(pb)
@@ -207,16 +202,14 @@ public class LogGeneratedClassesTest {
 
     @Test
     public void testDumpDirNotWritable() throws Exception {
-        if (!Files.getFileStore(Paths.get("."))
-                  .supportsFileAttributeView(PosixFileAttributeView.class)) {
-            // No easy way to setup readonly directory without POSIX
-            // We would like to skip the test with a cause with
-            //     throw new SkipException("Posix not supported");
-            // but jtreg will report failure so we just pass the test
-            // which we can look at if jtreg changed its behavior
-            System.out.println("WARNING: POSIX is not supported. Skipping testDumpDirNotWritable test.");
+        FileStore fs;
+        try {
+            fs = Files.getFileStore(Paths.get("."));
+        } catch (IOException e) {
+            Assumptions.assumeTrue(false, "WARNING: IOException occurred: " + e + ", Skipping testDumpDirNotWritable test.");
             return;
         }
+        Assumptions.assumeFalse(!fs.supportsFileAttributeView(PosixFileAttributeView.class), "WARNING: POSIX is not supported. Skipping testDumpDirNotWritable test."); // No easy way to setup readonly directory without POSIX
 
         Path testDir = Path.of("readOnly");
         Path dumpDir = testDir.resolve(DUMP_LAMBDA_PROXY_CLASS_FILES);
@@ -224,16 +217,11 @@ public class LogGeneratedClassesTest {
         Files.createDirectory(dumpDir,
                               asFileAttribute(fromString("r-xr-xr-x")));
         try {
-            if (isWriteableDirectory(dumpDir)) {
-                // Skipping the test: it's allowed to write into read-only directory
-                // (e.g. current user is super user).
-                System.out.println("WARNING: The dump directory is writeable. Skipping testDumpDirNotWritable test.");
-                return;
-            }
+            Assumptions.assumeFalse(isWriteableDirectory(dumpDir), "WARNING: The dump directory is writeable. Skipping testDumpDirNotWritable test."); // Skipping the test: it's allowed to write into read-only directory
+            // (e.g. current user is super user).
 
             ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                    "-cp", CLASSES.toString(),
-                                   "-Djava.security.manager=allow",
                                    "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                    "com.example.TestLambda").directory(testDir.toFile());
             executeProcess(pb)
@@ -252,15 +240,13 @@ public class LogGeneratedClassesTest {
         Files.createFile(dumpDir.resolve("com/example/nonsense/nonsense"));
         ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
                                "-cp", CLASSES.toString(),
-                               "-Djava.security.manager=allow",
                                "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
                                longFQCN).directory(testDir.toFile());
         OutputAnalyzer outputAnalyzer = executeProcess(pb);
         outputAnalyzer.shouldHaveExitValue(0);
-        assertEquals(outputAnalyzer.asLines().stream()
-                                  .filter(s -> s.startsWith("WARNING: Exception"))
-                                  .count(),
-                     2, "show error each capture");
+        assertEquals(2, outputAnalyzer.asLines().stream()
+                .filter(s -> s.startsWith("WARNING: Exception"))
+                .count(), "show error each capture");
         // dumpLong/DUMP_LAMBDA_PROXY_CLASS_FILES/com/example/nonsense/nonsense
         Path dumpPath = dumpDir.resolve("com/example/nonsense");
         Predicate<Path> filter = p -> p.getParent() == null || dumpPath.startsWith(p) || p.startsWith(dumpPath);
@@ -275,8 +261,8 @@ public class LogGeneratedClassesTest {
                     }
                  });
         }
-        assertEquals(Files.walk(dumpDir)
+        assertEquals(5, Files.walk(dumpDir)
                 .filter(filter)
-                .count(), 5, "Two lambda captured failed to log");
+                .count(), "Two lambda captured failed to log");
     }
 }
